syntax = "proto3";

package quaiprotocol;
option go_package = "github.com/dominant-strategies/go-quai/p2p/pb";

import "common/proto_common.proto";
import "trie/proto_trienode.proto";
import "core/types/proto_block.proto";

// GossipSub messages for broadcasting blocks and transactions
message GossipWorkObject { block.ProtoWorkObject work_object = 1; }

message GossipTransaction { block.ProtoTransaction transaction = 1; }

// QuaiRequestMessage is the main 'envelope' for QuaiProtocol request messages
message QuaiRequestMessage {
    uint32 id = 1;
    common.ProtoLocation location = 2;
    oneof data {
        common.ProtoHash hash = 3;
        bytes number = 4;
    }
    oneof request {
        block.ProtoWorkObject work_object = 5;
        block.ProtoTransaction transaction = 6; 
        common.ProtoHash block_hash = 7;
        trie.ProtoTrieNode trie_node = 8;
    }
}

// QuaiResponseMessage is the main 'envelope' for QuaiProtocol response messages
message QuaiResponseMessage {
    uint32 id = 1;
    common.ProtoLocation location = 2;
    oneof response {
        block.ProtoWorkObject work_object = 3;
        block.ProtoTransaction transaction = 4;
        common.ProtoHash block_hash = 5;
        trie.ProtoTrieNode trie_node = 6;
    }
}

message QuaiMessage {
    oneof payload {
        QuaiRequestMessage request = 1;
        QuaiResponseMessage response = 2;
    }
}
